# Materia

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Please run  README.md  android-vulkan.md  build.gradle.kts  gradle.properties  implementation-plan.md  mvp-plan.md  package-lock.json  production-plan.md  remaining-work.md  settings.gradle.kts  version.gradle.kts  version.properties  voxelcraft_log.txt  voxelcraft_log_2.txt  voxelcraft_log_3.txt  voxelcraft_log_4.txt  voxelcraft_log_5.txt  voxelcraft_log_6.txt
.junie/: guidelines.md
docs/: ANDROID_TESTING_GUIDE.md  ANDROID_VULKAN_FIXES.md  ANDROID_VULKAN_IMPLEMENTATION_COMPLETE.md  ANDROID_VULKAN_ROOT_CAUSE.md  ANDROID_VULKAN_TROUBLESHOOTING.md  API_STYLE.md  COMPREHENSIVE_DOCUMENTATION_SUMMARY.md  DOCUMENTATION_COMPLETION_STATUS.md  DOCUMENTATION_COVERAGE_SUMMARY.md  MVP_STATUS.md  PERF_NOTES.md  README.md  quickstart.md  renderer-api.md  voxelcraft-implementation-summary.md  voxelcraft-materia-integration.md  voxelcraft-rendering-implementation.md
kreekt-gpu-android-native/: CMakeLists.txt  build.gradle.kts
kreekt-gpu-android-native/src/main/: AndroidManifest.xml
kreekt-gpu-android-native/src/main/cpp/: jni_bridge.cpp  vulkan_bridge.cpp
kreekt-gpu-android-native/src/main/cpp/include/: vulkan_bridge.hpp
materia-gpu-android-native/: CMakeLists.txt  build.gradle.kts
materia-gpu-android-native/src/main/: AndroidManifest.xml
materia-gpu-android-native/src/main/cpp/: jni_bridge.cpp  vulkan_bridge.cpp
materia-gpu-android-native/src/main/cpp/include/: vulkan_bridge.hpp
(+1652 files in other folders)
